--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
-# Distribution / packaging
+# Distribution / packagingS
 .Python
 build/
 develop-eggs/
@@ -25,6 +24,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+# add 
+ice-cream-dataops/function_local_venvs/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
